# Training

./: .gitignore  LINEAR_KAN_FNO_IMPLEMENTATION_GUIDE.md  pyproject.toml
configs/: data.yaml  experiment.yaml  fft_solver.yaml  freeform_kan_colab.yaml  freeformkan_interpretability.yaml  ls_fno.yaml  training_colab.yaml  training_linear_prototype.yaml
data/visualize/: OLD_VD.py  sanity_check.py  visualize_dataset.py
datasets/: micromechanics.py
evaluation/: compare_to_fft.py  visualize_sample.py
generation/: fft_solver.py  generate_dataset.py  microstructure.py  nonlinear_fft_solver.py
generation/tests/: test_nonlinear_fft.py  test_nonlinear_fft_solver.py  test_nonlinear_kan.py
misc/: test.py  test2.py  test3.py  test4.py  test5.py  test6.py
models/: __init__.py  freeform_kan.py  kan_tau_theta.py  ls_fno.py  nonlinear_kan_tau_theta.py
notebooks/: 01_train_linear.ipynb  02_train_freeform_kan.ipynb  freeformKAN_interpretability.ipynb
replicate/: paper2_alpha_calibration.py  paper2_diagnostics.py  paper2_kan_alpha_comparison.py  paper2_section521.py  paper2_study1_kan.py
study/: geometry.py  kan_solver.py  plot_geometry.py  run_study.py  runner.py  scenarios.py
symbolic/: recover.py
training/: losses.py  metrics.py  train.py  trainer.py
unittests/: generate_test_cases.py  run_tests.py
utils/: config_loader.py  notation.py  plot_nonlinear_kan_bsplines.py
