[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ls-kan-fno"
version = "0.1.0"
description = "Lippmann-Schwinger KAN-FNO for computational micromechanics"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "h5py>=3.10",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "sympy>=1.12",
]

# Packages are listed explicitly (not auto-discovered) so that scratch/diagnostic
# directories (study/, replicate/, unittests/, misc/) are never accidentally
# installed as part of the package. Add a new entry here only once a directory
# has real __init__.py-backed content (e.g. evaluation/, symbolic/ once populated).
[tool.setuptools]
packages = ["generation", "models", "utils", "datasets", "training"]
